attempt to catch more than spaces